MFB: Fixed bug #42783 (pg_insert() does not accept an empty list for insertion)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@243479 c90b9560-bf6c-de11-be94-00142212c4b1